# Tiburon_ROS_task1

./: LICENSE
task1/src/: node1.cpp  node2.cpp  node3.cpp
task2/SECOND/: CMakeLists.txt
task2/SECOND/src/: node1.cpp  node2.cpp  node3.cpp
task2/src/: node1.cpp  node2.cpp  node3.cpp
task3/THIRD/: CMakeLists.txt  package.xml
task3/THIRD/src/: node1.cpp  node2.cpp  node3.cpp
task4/FOURTH/: CMakeLists.txt
task4/FOURTH/src/: node1.cpp  node2.cpp  node3.cpp
task5/FIFTH/: CMakeLists.txt  package.xml
task5/FIFTH/src/: thr.cpp
task6/SIXTH/: CMakeLists.txt  package.xml
task6/SIXTH/src/: angle.cpp
task7/SEVENTH/: CMakeLists.txt  package.xml
task7/SEVENTH/src/: gate.cpp
